--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "live-server": "^1.2.0"
+    "live-server": "^1.2.0",
+    "web-push": "^3.4.1"
   },
   "description": "# Partie 1 : Commencer le projet et l'ouvrir sur le serveur local",
   "devDependencies": {},
